@@ -1,5 +1,13 @@
 2010-02-18  Abel Cheung  <abelcheung@gmail.com>
 
+	* misc/tint-image.php:
+	- New file, to tint score images using color specified by user.
+	* wp-scorerender.php:
+	- (scorerender_process_content) Always output image using
+	  tint-image.php.
+
+2010-02-18  Abel Cheung  <abelcheung@gmail.com>
+
 	* wp-scorerender.php:
 	- (scorerender_get_upload_dir) Removed, now that WP 2.6 is required
 	  and wp_upload_dir() is pretty much standardized since then.
